tests/basic/bad/test50.pepa
% File: tests/bad/test50.pepa
% Syntax error, missing comma in synchronisation set
P = (a, r).P;
(P <a a> P)
